// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    aria-hidden={false}
    className=""
    disabled={false}
    flat={true}
    onClick={[MockFunction]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <Translate
      className={null}
      params={Object {}}
      role={null}
      string="filter.apply"
      style={
        Object {
          "color": undefined,
        }
      }
    />
  </Button>
</div>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    aria-hidden={false}
    className=""
    disabled={false}
    flat={true}
    onClick={[Function]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <Translate
      className={null}
      params={Object {}}
      role={null}
      string="filter.apply"
      style={
        Object {
          "color": undefined,
        }
      }
    />
  </Button>
</div>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    aria-hidden={true}
    className=""
    disabled={true}
    flat={true}
    onClick={[Function]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <Translate
      className={null}
      params={Object {}}
      role={null}
      string="filter.apply"
      style={
        Object {
          "color": undefined,
        }
      }
    />
  </Button>
</div>
`;
